Bug 53699 - [GM45 SNA] openbox window buttons regression in 2.20.4
Summary: [GM45 SNA] openbox window buttons regression in 2.20.4
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-19 07:01 UTC by Edward Sheldrake
Modified: 2012-08-19 09:29 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot (49.20 KB, image/png)
2012-08-19 07:01 UTC, Edward Sheldrake
no flags Details

Description Edward Sheldrake 2012-08-19 07:01:12 UTC
Created attachment 65760 [details]
screenshot

Openbox window buttons are drawn slightly incorrectly in xf86-video-intel 2.20.4, a regression from 2.20.3.

Perhaps easiest to see on what should be the 4 squares for the "Send to desktop" -> "All desktops" context menu icon.

git bisect points to the first bad commit as being:

commit 85192f00e345830541e3715e211b1f98154bbef4
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Aug 8 12:11:50 2012 +0100

    sna: Ignore trailing bits when comparing lines inside the bitmap
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=51422
Comment 1 Chris Wilson 2012-08-19 09:29:54 UTC
commit 13d1a105159222518800d3c5ad5660725864ec6b
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Aug 19 09:48:05 2012 +0100

    sna: compare the correct trailing dword when skipping identical bitmap lines
    
    Fixes regression in 2.20.4 from
    
    commit 85192f00e345830541e3715e211b1f98154bbef4
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Wed Aug 8 12:11:50 2012 +0100
    
        sna: Ignore trailing bits when comparing lines inside the bitmap
    
    Reported-by: Edward Sheldrake <ejsheldrake@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=53699
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.