sna: compare the correct trailing dword when skipping identical bitmap lines

Fixes regression in 2.20.4 from

commit 85192f00e345830541e3715e211b1f98154bbef4
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Aug 8 12:11:50 2012 +0100

    sna: Ignore trailing bits when comparing lines inside the bitmap

Reported-by: Edward Sheldrake <ejsheldrake@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=53699
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>